if HAVE_TRACKER_FTS
libtrackerfts_dir = libtracker-fts
endif

SUBDIRS =                                              \
	ontologies				       \
	gvdb                                           \
	libtracker-common                              \
	libtracker-sparql                              \
	$(libtrackerfts_dir)                           \
	libtracker-bus                                 \
	libtracker-data                                \
	libtracker-direct                              \
	libtracker-remote                              \
	libtracker-sparql-backend                      \
	libtracker-miner                               \
	libtracker-control                             \
	tracker                                        \
	tracker-store

EXTRA_DIST = \
	meson.build
