# Shared common code
subdir('libtracker-common')

# Public ontologies
subdir('ontologies')

subdir('gvdb')

# Intermediate library of RDF & SPARQL helper functions.
# This gets used internally and also becomes part of the
# public libtracker-sparql library.
subdir('libtracker-sparql')

# Public commandline control tool
subdir('tracker')

# XDG Portal
subdir('portal')
