# Shared common code
subdir('common')

# TinySPARQL HTTP library
subdir('http')

# Public ontologies
subdir('ontologies')

# Web IDE 
subdir('web-ide')

# Intermediate library of RDF & SPARQL helper functions.
# This gets used internally and also becomes part of the
# public libtracker-sparql library.
subdir('libtracker-sparql')

# Public commandline control tool
subdir('cli')

# XDG Portal
subdir('portal')
