SUBDIRS =                                              \
	gtk-sparql                                     \
	ontology                                       \
	data-generators                                \
	mtp                                            \
	tracker-sql				       \
	sandbox

if HAVE_TRACKER_RESDUMP
SUBDIRS += tracker-resdump
endif

