SUBDIRS =                                              \
	ontology                                       \
	data-generators                                \
	mtp                                            \
	sandbox

if HAVE_TRACKER_RESDUMP
SUBDIRS += tracker-resdump
endif

EXTRA_DIST = meson.build g-ir-merge/g-ir-merge
