include $(top_srcdir)/Makefile.decl

configdir = $(datadir)/tracker

config_DATA =				\
	sqlite-contents.sql		\
	sqlite-email.sql		\
	sqlite-metadata.sql 		\
	sqlite-fulltext.sql 		\
	sqlite-service.sql		\
	sqlite-service-triggers.sql 	\
	sqlite-service-types.sql 	\
	sqlite-stored-procs.sql 	\
	sqlite-tracker.sql 		\
	sqlite-tracker-triggers.sql

EXTRA_DIST = $(config_DATA)
