include $(top_srcdir)/Makefile.decl

configdir = $(datadir)/tracker/languages

config_DATA =                                          \
	stopwords.da                                   \
	stopwords.de                                   \
	stopwords.en                                   \
	stopwords.es                                   \
	stopwords.fi                                   \
	stopwords.fr                                   \
	stopwords.hu                                   \
	stopwords.it                                   \
	stopwords.nb                                   \
	stopwords.nl                                   \
	stopwords.pt                                   \
	stopwords.ru                                   \
	stopwords.sv

EXTRA_DIST = $(config_DATA)
