include $(top_srcdir)/Makefile.decl

configdir = $(datadir)/tracker/ontologies

config_DATA =			\
	10-xsd.ontology		\
	11-rdf.ontology		\
	12-nrl.ontology		\
	20-dc.ontology		\
	30-nie.ontology		\
	31-nao.ontology		\
	32-nco.ontology		\
	33-nfo.ontology		\
	34-nmo.ontology		\
	35-ncal.ontology	\
	37-nid3.ontology

EXTRA_DIST = $(config_DATA)

