include $(top_srcdir)/Makefile.decl

configdir = $(datadir)/tracker/services

config_DATA = 				\
	application.metadata 		\
	audio.metadata 			\
	default.metadata 		\
	default.service 		\
	document.metadata 		\
	email.metadata 			\
	file.metadata 			\
	image.metadata 			\
	video.metadata 			\
	xesam-convenience.metadata 	\
	xesam-convenience.service 	\
	xesam.metadata 			\
	xesam.service 			\
	xesam-virtual.metadata 		\
	xesam-service.smapping 		\
	xesam-metadata.mmapping

EXTRA_DIST = $(config_DATA)
