include $(top_srcdir)/Makefile.decl

configdir = $(datadir)/tracker/services

config_DATA = 				\
	application.metadata 		\
	audio.metadata 			\
	conversation.metadata		\
	default.metadata 		\
	default.service 		\
	document.metadata 		\
	email.metadata 			\
	file.metadata 			\
	image.metadata 			\
	video.metadata 			\
	playlist.metadata		

EXTRA_DIST = $(config_DATA)
