include $(top_srcdir)/Makefile.decl

SUBDIRS =                                              \
	libtracker-sparql                              \
	libtracker-client                              \
	libtracker-extract                             \
	libtracker-miner

if ENABLE_GTK_DOC
SUBDIRS += ontology
endif
