docpath = join_paths(datadir, 'gtk-doc')

icon_images_base = meson.current_source_dir()
icon_images = files(
  'images/icon-deprecated.svg',
  'images/icon-fulltextindexed.svg',
  'images/icon-multivalue.svg',
  'images/icon-notify.svg',
  'images/icon-superproperty.svg',
)

subdir('libtracker-sparql')
